Multiple small changes including spell check.  Added references to all the subgroup reports.

--- a/SnowmassStyle/Computing/Computing-executiveSummary.tex
+++ b/SnowmassStyle/Computing/Computing-executiveSummary.tex
@@ -6,33 +6,20 @@ Computing has become a major component of all particle physics experiments
 and many areas of theoretical particle physics. 
 Progress in particle physics experiment and theory will require significantly more
 computing, software development, storage, and networking, with different
-projects stretching future capabilities in different ways.  However, there
-are many common needs among different areas in particle physics, so more
-community planning is advised to increase efficiency.
-Careful and continuing review of the topics we studied, 
-{\it i.e.}, user needs and capabilities of
-current and future technology, is needed.  For many years, the particle physics
-community has been a great source of computing innovation and expertise. 
-We must continue to share our expertise within our field and beyond.
-We should find more opportunties to learn from others as well.
-
-One difference between computing and other enabling technologies is that there is
-a vibrant global computer industry that is constantly creating new products
-and improving current ones.  Although some of the computing equipment that we deploy
-is customized, such as application-specific integrated circuits, the vast
-majority of it is widely available.  We are not building a bespoke detector with
-a multi-decade lifetime.  For the most part, we are purchasing commercially available
-computing equipment that will last less than ten years.  However, we need to
-carefully examine our computing needs and the available technology
-to ensure that our systems are configured to cost-effectively meet those needs.
-In contrast to the short lifetime of the hardware, the
-software that is developed for both experiment and theory has a longer
-lifetime. Still, the software
-is undergoing continual development and optimization.   Our study group
-considered the hardware and software needs of particle physics for the next
-ten to twenty years, and recommends, not a grand project or two, but a continuing
-process of monitoring and supporting the hardware and software needs of the field
-in order to optimize the contribution of computing to scientific output.
+projects stretching future capabilities in different ways.  
+As a result of considerable work throughout the Snowmass process, we
+recommend improved training, more community planning, careful and continuing 
+review of the topics outlined in more detail below, and expanded efforts 
+to share our expertise with and learn from experts beyond our field.
+%%%However, there
+%%%are many common needs among different areas in particle physics, so more
+%%%community planning is advised to increase efficiency.
+%%%Careful and continuing review of the topics we studied, 
+%%%{\it i.e.}, user needs and capabilities of
+%%%current and future technology, is needed.  For many years, the particle physics
+%%%community has been a great source of computing innovation and expertise. 
+%%%We must continue to share our expertise within our field and beyond.
+%%%We should find more opportunties to learn from others as well.
 
 The Computing 
 subgroups covered user needs and infrastructure.
@@ -50,6 +37,25 @@ subgroups engaged with the other frontiers to learn of
 their plans and to estimate their computing needs.  The infrastructure groups
 engaged with vendors, computer users, providers, and technical experts. 
 
+Our study group
+considered the hardware and software needs of particle physics for the next
+ten to twenty years, and recommends, not a grand project or two, but a continuing
+process of monitoring and supporting the hardware and software needs of the field
+in order to optimize the contribution of computing to scientific output.
+One difference between computing and other enabling technologies is that there is
+a vibrant global computer industry that is constantly creating new products
+and improving current ones.  Although some of the computing equipment that we deploy
+is customized, such as application-specific integrated circuits, the vast
+majority of it is widely available.  We are not building a bespoke detector with
+a multi-decade lifetime.  For the most part, we are purchasing commercially available
+computing equipment that will last less than ten years.  However, we need to
+carefully examine our computing needs and the available technology
+to ensure that our systems are configured to cost-effectively meet those needs.
+In contrast to the short lifetime of the hardware, the
+software that is developed for both experiment and theory has a longer lifetime. 
+However, the software is undergoing continual development and optimization.   
+
+Two different styles of computing are currently used in particle physics.
 The experimental program mainly relies on distributed
 high-throughput computing (HTC). 
 The distributed computing model was pioneered by Energy Frontier
@@ -62,8 +68,9 @@ tightly coupled central processing units (CPUs) are working together on a single
 problem. These resources are provided mostly through DOE and NSF
 supercomputing centers.
 
-To what degree can or should data-intensive applications that traditionally 
-rely on HTC use national supercomputer centers, which have traditionally 
+One important issue to consider is 
+to what degree can or should data-intensive applications that have traditionally 
+relied on HTC use national supercomputer centers, which have traditionally 
 been designed for HPC usage?
 Work is proceeding to determine how well and how cost-effectively these HTC
 applications can run at HPC centers.
@@ -128,7 +135,7 @@ within particle physics, including tenure-track jobs, for those working at
 the forefront of computation.
 
 Subsequent sections of this chapter summarize the finding of each of our subgroups.
-We start with the needs of the Energy, Intensity, and Cosmic Froniers.  We then
+We start with the needs of the Energy, Intensity, and Cosmic Frontiers.  We then
 turn to the needs of theoretical areas: accelerator science, lattice field theory,
 and perturbative QCD.  Theoretical work in astrophysics and cosmology is included
 in the Cosmic Frontier section.  
