--- a/SnowmassStyle/Computing/E3-executiveSummary.tex
+++ b/SnowmassStyle/Computing/E3-executiveSummary.tex
@@ -15,11 +15,19 @@ The Intensity Frontier encompasses a large spectrum of physics, including quark 
 physics,  charged lepton processes, neutrinos, baryon number violation,  new
 light weakly-coupled particles, and nucleons, nuclei, and atoms.  The
 requirements and resources of quark flavor physics, as in Belle II and LHCb,
-are similar to those of the Energy Frontier. The requirements and
-resources of  experiments looking for baryon number violation and  experiments
-searching for new light weakly-coupled particles are similar to  those of the
-Cosmic Frontier.  This section thus focuses on the areas of charged lepton processes,  neutrinos, nucleons,
-nuclei and atoms.
+are similar to those of the Energy Frontier. 
+%%%The requirements and
+%%%resources of  experiments looking for baryon number violation and  experiments
+%%%searching for new light weakly-coupled particles are similar to  those of the
+%%%Cosmic Frontier.  This section thus focuses on the areas of charged lepton processes,  neutrinos, nucleons,
+%%%nuclei and atoms.
+Intensity Frontier experiments are carried out at a number of laboratories 
+around the world, including JLab, IHEP, KEK, J-PARC, and PSI.  
+Our group looked most intensely at the complex of Intensity Frontier 
+experiments planned for Fermilab and the issues in finding common 
+computing solutions for these experiments.  
+We hope that the insights we present here will also be relevant in a 
+broader, global, context.
 
 The Intensity Frontier has increasingly become a focus of the U.S.-based particle physics program. Many  of
 the experiments are designed to use very intense particle beams to measure
@@ -82,7 +90,7 @@ experiments continue to increase and the separation of signal from background
 becomes more difficult due to the rare nature of the processes being examined.
 This ability will also allow Intensity Frontier experiments to take advantage of the design of
 modern computers containing multiple cores. Other experiments use LHC-derived
-frameworks such as Gaudi, or homegrown frameworks like MINOS(+), IceTray, and
+frameworks such as Gaudi, or homegrown frameworks like MINOS+, IceTray, and
 RAT. The level of support for development and maintenance of such frameworks
 varies. These experiments would also benefit from more access to
 parallelization and professional computing support.
@@ -200,7 +208,7 @@ currently we can only run GPU-accelerated code on local, custom-built systems.
 \subsection{Summary}
 To summarize, the computing needs of the Intensity Frontier experiments should be viewed
 collectively.  When combined, these experiments require the resources and
-support similar to a single EF experiment.  The support of these experiments
+support similar to a single Energy Frontier experiment.  The support of these experiments
 directly impacts the quality of results and the efficiency with which those
 results can be obtained.  There is significant support already for Intensity Frontier
 experiments that are based at Fermilab and the support requirements are
@@ -230,3 +238,5 @@ existing expertise and large number of Intensity Frontier experiments already on
 There are efforts and problems that are shared across frontiers.  Thus, significant
 investments in ROOT and Geant4 optimizations, HPC for particle physics, 
 transparent OSG access, and open data solutions would have a high payoff.
+
+Additional details may be found in the full subgroup report \cite{Rebel:2013xaa}.
