--- a/SnowmassStyle/Computing/I3-executiveSummary.tex
+++ b/SnowmassStyle/Computing/I3-executiveSummary.tex
@@ -34,3 +34,5 @@ Campuses must deploy secure science data enclaves – --- or  Science DMZs \cite
 Ten years from now, the key applications on which particle physics depends will only be fully successful, efficient, or cost-effective if they are run on the networks that exist today. 
 During the next decade, research networks need to evolve into programmable instruments – --- flexible resources that can be customized for particular needs, but that exist within a common, integrated, ubiquitous framework that is reliable, robust and trusted for its privacy and integrity. These are major challenges, but they are tractable if funding agencies invest in innovative research, and maintain support for the exponential growth of NREN traffic. 
 
+Additional details may be found in the full subgroup report \cite{Bell:2013fwa}.
+
