--- a/SnowmassStyle/Computing/I4-executiveSummary.tex
+++ b/SnowmassStyle/Computing/I4-executiveSummary.tex
@@ -1,7 +1,7 @@
 \section{Software development, staffing, and training}
 
 The success of particle physics will continue to critically depend on computing.
-Managing the human activities accociate with computing
+Managing the human activities associated with computing
 (software development and management,
 training and staffing) is an important part of that.  
 Based upon our own experiences, and from
@@ -66,4 +66,6 @@ new skills
     \end{itemize}
 
 \end{itemize}
+
+Additional details may be found in the full subgroup report \cite{Brown:2013hwa}.
 
