--- a/SnowmassStyle/Computing/I5-executiveSummary.tex
+++ b/SnowmassStyle/Computing/I5-executiveSummary.tex
@@ -52,3 +52,5 @@ that meet the needs of the particle physics and astrophysics  communities
 before widespread release of data to the public can be expected  or
 mandated.
 
+Additional details may be found in the full subgroup report \cite{Butler:2013kka}.
+
