--- a/SnowmassStyle/Computing/T1-executiveSummary.tex
+++ b/SnowmassStyle/Computing/T1-executiveSummary.tex
@@ -12,7 +12,7 @@ Most software for accelerator science are already parallelized and scalable to
 more than ten thousand cores on high performance computers. 
 Modeling physical fields using various approximations requires different 
 numerical methods.  For example, electrostatic models utilize multigrid, 
-adaptive mesh refinment (AMR) multigrid or spectral methods.
+adaptive mesh refinement (AMR) multigrid or spectral methods.
 On the other hand, fully electrodynamic models use a variety of
 finite difference and finite element methods.
 %, while various finite difference and finite element methods are best for fully electromagnetic models (finite element direct and hybrid, extended stencil finite difference, AMR finite difference). 
@@ -166,6 +166,9 @@ impact on the choice of numerical techniques for different
 physics implementations.  Plasma accelerators additionally require 
 computation of these effects with accurate plasma and laser dynamics,
  often requiring unique algorithms.
+
+Additional details may be found in the full subgroup report \cite{Spentzouris:2013jla}.
+
 
 \begin{table}[t]
 \begin{center}
