--- a/SnowmassStyle/Computing/T3-executiveSummary.tex
+++ b/SnowmassStyle/Computing/T3-executiveSummary.tex
@@ -35,7 +35,8 @@ five-year project extension, ``LQCD-ext~II.''  The Collaboration's ongoing
 software development and maintenance activities are supported by SciDAC-3
 grants.
 
-The report of the lattice field theory working group summarizes the scientific
+The report of the lattice field theory working group \cite{Blum:2013mhx}
+summarizes the scientific
 goals of the U.S. lattice gauge theory community, presents the current and
 future computing needs and plans, and argues that continued support of the
 U.S. (and worldwide) lattice-QCD effort is essential to fully capitalize on
