--- a/SnowmassStyle/Computing/T4-executiveSummary.tex
+++ b/SnowmassStyle/Computing/T4-executiveSummary.tex
@@ -102,6 +102,8 @@ existing interface. The amount of training for new users could be minimized
 if the OSG were to act as a front-end to the national HPC facilities
 as well as conventional computing facilities.
 
+Additional details may be found in the full subgroup report \cite{Hoche:2013zja}.
+
 \begin{table}
 \begin{center}
   \begin{tabular}{ccc}
