--- a/SnowmassStyle/Computing/bib.tex
+++ b/SnowmassStyle/Computing/bib.tex
@@ -10,6 +10,44 @@
 \bibitem{HS06}
 \url{w3.hepix.org/benchmarks/doku.php/}.
 
+%\cite{Fisk:2014lia}
+\bibitem{Fisk:2014lia} 
+  I.~Fisk and J.~Shank,
+  %``Computing for the Energy Frontier: Snowmass Study 2013,''
+  arXiv:1401.1840 [hep-ex].
+  %%CITATION = ARXIV:1401.1840;%%
+
+
+%\cite{Rebel:2013xaa}
+\bibitem{Rebel:2013xaa}
+  B.~Rebel, M.~C.~Sanchez and S.~Wolbers,
+  %``Snowmass 2013 Computing Frontier: Intensity Frontier,''
+  arXiv:1310.6964 [hep-ex].
+  %%CITATION = ARXIV:1310.6964;%%
+
+%\cite{Connolly:2013ibs}
+\bibitem{Connolly:2013ibs}
+  A.~Connolly, S.~Habib, A.~Szalay, J.~Borrill, G.~Fuller, N.~Gnedin, K.~Heitmann and D.~Jacobs {\it et al.},
+  %``Snowmass Computing Frontier: Computing for the Cosmic Frontier, Astrophysics, and Cosmology,''
+  arXiv:1311.2841 [astro-ph.CO].
+  %%CITATION = ARXIV:1311.2841;%%
+  %1 citations counted in INSPIRE as of 08 Jan 2014
+
+%\cite{Spentzouris:2013jla}
+\bibitem{Spentzouris:2013jla}
+  P.~Spentzouris, E.~Cormier-Michel, C.~Joshi, J.~Amundson, W.~An, D.~L.~Bruhwiler, J.~R.~Cary and B.~Cowan {\it et al.},
+  %``Snowmass 2013 Computing Frontier: Accelerator Science,''
+  arXiv:1310.2203 [physics.acc-ph].
+  %%CITATION = ARXIV:1310.2203;%%
+
+%\cite{Blum:2013mhx}
+\bibitem{Blum:2013mhx}
+  T.~Blum, R.~S.~Van de Water, D.~Holmgren, R.~Brower, S.~Catterall, N.~Christ, A.~Kronfeld and J.~Kuti {\it et al.},
+  %``Report of the Snowmass 2013 Computing Frontier working group on Lattice Field Theory -- Lattice field theory for the energy and intensity frontiers: Scientific goals and computing needs,''
+  arXiv:1310.6087 [hep-lat].
+  %%CITATION = ARXIV:1310.6087;%%
+  %1 citations counted in INSPIRE as of 08 Jan 2014
+
 \bibitem{USQCD_IF_whitepaper13}
 T.~Blum {\em et al.} [USQCD Collaboration],
 {\em Lattice QCD at the Intensity Frontier},
@@ -30,7 +68,6 @@ T.~Applequist {\em et al.} [USQCD Collaboration],
   
 \bibitem{SciDAC-software}
 \url{usqcd.jlab.org/usqcd-software/}.
-
 
 %\cite{Aad:2012tfa}
 \bibitem{Aad:2012tfa} 
@@ -80,9 +117,47 @@ C.~Bauer {\it et al.},
 %``The computing needs of theoretical high energy physics at the Energy Frontier''
 \url{snowmass2013.org/tiki-index.php?page=HEP+Theory+and+High-Performance-Computing}.
 
+%\cite{Hoche:2013zja}
+\bibitem{Hoche:2013zja}
+  S.~Hoche, L.~Reina, M.~Wobisch, C.~Bauer, Z.~Bern, R.~Boughezal, J.~Campbell and N.~D.~Christensen {\it et al.},
+  %``Computing for Perturbative QCD - A Snowmass White Paper,''
+  arXiv:1309.3598 [hep-ph].
+  %%CITATION = ARXIV:1309.3598;%%
+  %1 citations counted in INSPIRE as of 08 Jan 2014
+
+%\cite{NERSCHEP}
+\bibitem{NERSCHEP}
+\url{www.nersc.gov/science/hpc-requirements-reviews/HEP/}
+
+%\cite{Bloom:2013yva}
+\bibitem{Bloom:2013yva}
+  K.~Bloom and R.~Gerber,
+  %``Report of the Snowmass 2013 Computing Frontier Working Group on Distributed Computing and Facility Infrastructures,''
+  arXiv:1311.2208 [physics.comp-ph].
+  %%CITATION = ARXIV:1311.2208;%%
 
 %\cite{DMZ}
 \bibitem{DMZ}
 \url{fasterdata.es.net/science-dmz/}.
+
+\bibitem{Bell:2013fwa}
+  G.~Bell and M.~Ernst,
+  %``Snowmass 2013 Computing Frontier: Networking,''
+  arXiv:1311.2478 [hep-ex].
+  %%CITATION = ARXIV:1311.2478;%%
+
+%\cite{Brown:2013hwa}
+\bibitem{Brown:2013hwa}
+  D.~Brown, P.~Elmer, R.~Pordes, D.~Asner, G.~Dubois-Felsmann, V.~D.~Elvira, R.~Hatcher and C.~Jones {\it et al.},
+  %``Snowmass Computing Frontier: Software Development, Staffing and Training,''
+  arXiv:1311.2567 [physics.comp-ph].
+  %%CITATION = ARXIV:1311.2567;%%
+
+%\cite{Butler:2013kka}
+\bibitem{Butler:2013kka}
+  M.~Butler, R.~Mount and M.~Hildreth,
+  %``Snowmass 2013 Computing Frontier Storage and Data Management,''
+  arXiv:1311.4580 [hep-ex].
+  %%CITATION = ARXIV:1311.4580;%%
 
 \end{thebibliography}
