--- a/SnowmassStyle/Computing/wgreport.tex
+++ b/SnowmassStyle/Computing/wgreport.tex
@@ -10,9 +10,9 @@
 \begin{center}\begin{boldmath}
 
 \input Computing/authorlist.tex
-\begin{center}
-Draft version: November 24, 2013
-\end{center}
+%\begin{center}
+%Draft version: January 8, 2014
+%\end{center}
 %Conveners are also listed separately in authorlist.tex
 
 \end{boldmath}\end{center}
