--- a/SnowmassStyle/Computing/I2-executiveSummary.tex
+++ b/SnowmassStyle/Computing/I2-executiveSummary.tex
@@ -6,11 +6,13 @@ Energy Frontier experiments face a growth in data that will make it a challenge 
 
 Intensity Frontier experiments have comparatively smaller computing needs.  There are no technical reasons why they could not be met.  Such experiments should  use resources available through the Open Science Grid (OSG) or at national computing centers.  They would benefit from a collective effort to gain access to resources and share software and training.
 
-Cosmic Frontier experiments (and the simulations required to interpret them), lattice QCD, and accelerator design will need a large increase in HPC resources in the coming years. Demand for access to HPC across particle physics frontiers is expected to exceed the amount of available resources.  HPC-based computations are needed to interpret results from a number of important particle physics experiments, and to realize the scientific returns from the substantial investments in those experiments.  The NERSC report on particle physics computing needs indicates a shortage of HPC resources by a factor of four by 2017.  While funding and technology development needed to sustain traditional HPC growth rates are uncertain, they must be maintained to support particle physics.  There are a number of applications within particle physics that would benefit from exascale computing and a cadre of scientists eager to support efforts to reach that scale.
+Cosmic Frontier experiments (and the simulations required to interpret them), lattice QCD, and accelerator design will need a large increase in HPC resources in the coming years. Demand for access to HPC across particle physics frontiers is expected to exceed the amount of available resources.  HPC-based computations are needed to interpret results from a number of important particle physics experiments, and to realize the scientific returns from the substantial investments in those experiments.  The NERSC report on particle physics computing needs \cite{NERSCHEP} indicates a shortage of HPC resources by a factor of four by 2017.  While funding and technology development needed to sustain traditional HPC growth rates are uncertain, they must be maintained to support particle physics.  There are a number of applications within particle physics that would benefit from exascale computing and a cadre of scientists eager to support efforts to reach that scale.
 
 Distributed computing infrastructures, based at labs and universities, have been critical to the success of the Energy Frontier experiments and should continue to be able to serve these and other applications even as experiments grow.  There are no show-stoppers seen as scale increases, but various developments should be pursued to improve efficiency and ease of use.  Keeping sufficient staff support at a reasonable cost is a continuing concern; finding operational efficiencies could help address this.  Given that particle physics is the largest user of distributed scientific computing, currently in the form of HTC on computing grids, members of the field must continue to take a leadership role in its development.
 
 National centers play an important role in some aspects of computing, and particle physics might be able to take advantage of an expanded role.  Experiments should explore the use of the HPC centers as part of their efforts to diversify their computing architectures.  These centers do have access to large, state-of-the-art resources, operational support, and expertise in many areas of computing.
 
 We expect that distributed computing and facility infrastructures will continue to play a vital role in enabling discovery science.
+
+Additional details may be found in the full subgroup report \cite{Bloom:2013yva}.
 
