Putting in Jon Rosner's last ten corrections.

--- a/SnowmassStyle/Computing/E1-executiveSummary.tex
+++ b/SnowmassStyle/Computing/E1-executiveSummary.tex
@@ -242,6 +242,9 @@ versions. A rethink of statistical algorithm design is needed, and
 computations (and computability) should be explicitly included into
 the cost tradeoffs.
 
+Table \ref{tab:CosmicCompNeeds} summarizes current and future
+computational needs for the Cosmic Frontier.
+
 \subsection{Development and support of a computational community}
 The need for better programming models and better high-level
 abstractions is evident. In a complex, massively parallel system it
