--- a/SnowmassStyle/Computing/E2-executiveSummary.tex
+++ b/SnowmassStyle/Computing/E2-executiveSummary.tex
@@ -199,7 +199,7 @@ the diverse environments and to perform resource provisioning across
 dedicated, specialized, contributed, opportunistic, and purchased resources.
 
 \subsection{Becoming more selective}
-There are a considerable concerns regarding the enormous increase in data
+There are considerable concerns regarding the enormous increase in data
 produced by the next round of Energy Frontier colliders,   to be processed by the offline
 computing systems.  We observe that while the Energy Frontier processing capacity has
 increased largely as would be expected from Moore's law and relatively
