--- a/SnowmassStyle/Computing/E3-executiveSummary.tex
+++ b/SnowmassStyle/Computing/E3-executiveSummary.tex
@@ -96,7 +96,7 @@ varies. These experiments would also benefit from more access to
 parallelization and professional computing support.
 
 The survey identified the need for making consultants available to help with
-software development. All experiments indicated that the would like to
+software development. All experiments indicated that they would like to
 put more computing professional effort toward parallelization of code,
 establishing batch submission to off-site computing, establishing best
 practices for writing software, software development, and  optimizing use of
