--- a/SnowmassStyle/Computing/T3-executiveSummary.tex
+++ b/SnowmassStyle/Computing/T3-executiveSummary.tex
@@ -5,7 +5,7 @@
 
 
 One of the foremost goals of particle physics is to test the Standard Model
-of particle physics and to search for indications of new physics beyond. In
+and to search for indications of new physics beyond. In
 many cases, interpretation of the experimental measurements requires a
 quantitative understanding of the nonperturbative dynamics of the quarks and
 gluons in the underlying process.  Lattice gauge theory provides the only
@@ -59,7 +59,7 @@ Standard-Model predictions are currently limited by theoretical uncertainties
 from nonperturbative hadronic matrix elements or fundamental QCD parameters
 that can only be computed numerically with lattice QCD.  The USQCD
 Collaboration has laid out an ambitious vision for future lattice calculations
-matched to the experimental priorities of the planned experimental high-energy
+matched to the experimental priorities of the planned experimental particle
 physics program over the next decade in the white papers ``Lattice QCD at the
 Intensity Frontier'' and ``Lattice Gauge Theories at the Energy Frontier''
 \cite{USQCD_IF_whitepaper13,USQCD_EF_whitepaper13}.  These detailed documents
