--- a/SnowmassStyle/Computing/T4-executiveSummary.tex
+++ b/SnowmassStyle/Computing/T4-executiveSummary.tex
@@ -94,7 +94,7 @@ the creation of a knowledge base.
 
 Large-scale distributed computing in grid environments 
 may become relevant for perturbative QCD applications 
-in the near future. This development will be accelerated if Computing Grids
+in the near future. This development will be accelerated if computing grids
 can also provide access to HPC facilities and clusters where parallel 
 computing is possible on a smaller scale. The Open Science Grid (OSG)
 has taken first steps in this direction, and we have successfully used their
