--- a/SnowmassStyle/Computing/T1-executiveSummary.tex
+++ b/SnowmassStyle/Computing/T1-executiveSummary.tex
@@ -33,7 +33,7 @@ Frontiers are shown in Table~\ref{tab:CompNeeds}.  The estimate of needs is
 based on the current performance of our codes on the Hopper supercomputer at
 the National Energy Research Scientific Computing Center (NERSC). 
 The Energy Frontier has much greater data storage and networking needs
-than accelerator science, so do not detail our needs in this area, with one
+than accelerator science, so we do not detail our needs in this area, with one
 exception.  We assume that we can make use of the systems required by
 the Energy Frontier.
 %%%Note that in this report we do not detail data storage and
@@ -110,7 +110,7 @@ This is not the case in general, affecting our ability to find optimal design an
 More efforts are needed to integrate multiple physical effects for more accurate simulations, with the ability to utilize massive computing resources beyond the capabilities of today. 
    In the Energy Frontier, where single components of the accelerator are simulated separately, end-to-end simulations and integration between components are needed.  For example, plasma-based accelerator simulations must be advanced from modeling current experiments at the 10 GeV and 0.1 micron emittance level to future collider concepts involving hundreds of stages at the 0.01 micron emittance level. 
 This also requires integration of additional physical models such as scattering and radiation. For high-intensity circular proton machines, a large number of macro-particles ($\sim 10^9$) must be used in the simulations in order to accurately represent percent-level losses. In addition, detailed models of important components relevant to all frontier applications are missing from our simulation toolkits because of prohibitive computational cost and complexity.
-(For example, target modeling, including gas dynamics, MHD, and heat loading/dissipation, must be integrated to our toolkit). 
+(For example, target modeling, including gas dynamics, MHD, and heat loading/dissipation, must be integrated to our toolkit.) 
 Deployment of such capabilities
 will enable end-to-end simulations to validate designs based on
 new concepts and end-to-end operational parameter optimization of
@@ -151,7 +151,7 @@ plasma and beam methods capable of resolving 0.1 km-scale
 propagation of 10 nm scale emittance bunches and laser drivers,
 and the corresponding bunch conditioning and focusing. 
 There are also needs common to the Energy and Intensity Frontiers:
-For example, radiation and
+for example, radiation and
 scattering, which is relevant to muon collider, plasma and
 gamma-gamma options, and modeling of targets.
 %%  including gas
